# NTNU_Covid

./: CMakeLists.txt  CMakePresets.json  ImGuiApp.hpp  ImguiMain.cpp  KeyNumberInput.hpp  Makefile  NV_Assets.hpp  NV_Bezier.hpp  NV_Edge.hpp  NV_EdgeInstance.hpp  NV_Graph.hpp  NV_Graph_Designer.hpp  NV_Menu.hpp  NV_Node.hpp  NV_NodeInstance.hpp  NV_PopupMenu.hpp  NV_ProjectionBuffer.cpp  NV_ProjectionBuffer.hpp  NV_Style.hpp  NV_UISettings.hpp  NV_Utils.hpp  NV_glTFBasicInstance.hpp  NetworkViewPort.hpp  Network_Generation.hpp  OptSpringLayout.cpp  README.md  SIR.cpp  SIR.hpp  SIR.ignore  SIR_serial.cpp  SIR_sycl.cpp  SIR_test.hpp  SetupRoutines.hpp  Vertex.hpp  bezier.hpp  canvas.hpp  clean_cache.sh  computeBasic.hpp  configure.sh  cvAdvDiff_kry_sycl.cpp  (+10 more)
.vscode_old/: c_cpp_properties.json
Examples/: CMakeLists.txt
Examples/Network/: CMakeLists.txt  SIR_Network_Example.cpp
Examples/SIR/: CMakeLists.txt  SIR_Example.cpp
Executables/: CMakeLists.txt  ER_Clusters.cpp  ER_Clusters_2D.cpp  SetupRoutines.hpp  VoxelGround.cpp  WayCubes.cpp
Executables/compute_cube/: CMakeLists.txt  ComputeCube.cpp  compute.cpp  graphics.cpp  graphics.hpp  particle.cpp  particle.hpp
Executables/computecube/: CMakeLists.txt  ComputeCube.cpp  barrier.cpp  barrier.hpp  compute.cpp  compute.hpp  graphics.cpp  graphics.hpp  particle.cpp
Executables/cube_comp/: CMakeLists.txt  CubeComp.cpp
Executables/particle_compute/: CMakeLists.txt  ParticleCompute.cpp  compute.cpp  compute.hpp  particle.hpp
Executables/vertex_lighting/: CMakeLists.txt  LightingData.hpp  VertexLighting.cpp  menu.cpp  menu.hpp
Graph/: CMakeLists.txt  Graph_Generation.hpp  Graph_Layout.hpp  NV_Graph_Generation.hpp  NV_Graph_Layout.hpp
ImGui/: CMakeLists.txt  NV_Graph_Designer.cpp  NV_Graph_Designer.hpp  NV_ImGuiUI.cpp  NV_ImGuiUI.hpp  NV_Menu.cpp  NV_Menu.hpp  NV_Menu_Window_Defines.hpp  NV_UISettings.hpp
InstanceGraphics/: CMakeLists.txt  NV_Assets.hpp  NV_EdgeInstance.hpp  NV_NodeInstance.hpp  NV_glTFBasicInstance.cpp  NV_glTFBasicInstance.hpp
Menu/: CMakeLists.txt  Graph_Designer.cpp  NV_Graph_Designer.cpp  NV_Graph_Designer.hpp  NV_Menu.cpp  NV_Menu.hpp  NV_Menu_Window_Defines.hpp  NV_PopupMenu.hpp
NetworkViewport/ImGui/: ImGuiUI.cpp  ImGuiUI.hpp
NetworkViewport/Menu/: Graph_Designer.hpp  Menu.cpp  Menu.hpp  PopupMenu.hpp  UISettings.hpp
NetworkViewport/Utils/: CMakeLists.txt
OpenCL/: CMakeLists.txt  NV_CL_DefaultInstance.hpp
OpenCL/Examples/: CMakeLists.txt  RNG_Example.cpp
OpenCL/Kernels/: CMakeLists.txt
OpenCL/Utils/: NV_CL_Util.hpp
Utils/: CMakeLists.txt  FilePaths.h.in  NV_FilePaths.h.in
Vulkan/: CMakeLists.txt  NV_Camera.hpp  NV_Vulkan.cpp  NV_Vulkan.hpp  NV_VulkanBuffer.cpp  NV_VulkanBuffer.hpp  NV_VulkanDebug.cpp  NV_VulkanDebug.hpp  NV_VulkanDevice.cpp  NV_VulkanDevice.hpp  NV_VulkanInitializers.cpp  NV_VulkanInitializers.hpp  NV_VulkanInstance.cpp  NV_VulkanInstance.hpp  NV_VulkanPipelineInitializers.cpp  NV_VulkanPipelineInitializers.hpp  NV_VulkanSetup.cpp  NV_VulkanSetup.hpp  NV_VulkanSwapChain.cpp  NV_VulkanSwapChain.hpp  NV_VulkanTexture.hpp  NV_VulkanTools.cpp  NV_VulkanTools.hpp  NV_VulkanUtils.cpp  NV_VulkanUtils.hpp  NV_VulkanWindow.cpp  NV_VulkanWindow.hpp
Vulkan/Initializers/: CMakeLists.txt  NV_VulkanPipelineInitializers.hpp
Vulkan/InstanceGraphics/: CMakeLists.txt  NV_Assets.cpp  NV_Assets.hpp  NV_glTFBasicInstance.cpp  NV_glTFBasicInstance.hpp
Vulkan/Interactive/: CMakeLists.txt  NV_Camera.cpp  NV_Camera.hpp  NV_ProjectionBuffer.cpp  NV_ProjectionBuffer.hpp
Vulkan/Routines/: CMakeLists.txt  NV_VulkanSetup.cpp  NV_VulkanSetup.hpp  NV_VulkanWindow.cpp  NV_VulkanWindow.hpp
Vulkan/Structures/: CMakeLists.txt  NV_VulkanDevice.hpp  NV_VulkanInstance.cpp  NV_VulkanInstance.hpp  NV_VulkanSwapChain.hpp
Vulkan/Utilities/: CMakeLists.txt  NV_VulkanDebug.hpp  NV_VulkanTools.cpp  NV_VulkanTools.hpp
Vulkan/gltf/: CMakeLists.txt  NV_VulkanTexture.hpp  NV_VulkanglTFModel.hpp
assets/models/: ico_node.gltf  untitled.gltf
base/: VulkanglTFModel.cpp  VulkanglTFModel.h  keycodes.hpp
cmake/: ConfigureImGui.cmake  FindXCB.cmake  external_packages.cmake
core/: CMakeLists.txt
core/NetworkViewport/: CMakeLists.txt  NV_Application.cpp  NV_Application.hpp  NV_Buffers.cpp  NV_Buffers.hpp  NV_Command.cpp  NV_Command.hpp  NV_Descriptors.cpp  NV_Descriptors.hpp  NV_GraphicsPipeline.cpp  NV_GraphicsPipeline.hpp  NV_Nodes.cpp  NV_Nodes.hpp  NV_Queue.cpp  NV_Queue.hpp  NV_ShaderModule.cpp  NV_ShaderModule.hpp  NV_SwapChain.cpp  NV_SwapChain.hpp  NV_Synchronization.cpp  NV_Synchronization.hpp  NetworkViewport_Buffers.cpp  NetworkViewport_Buffers.hpp  NetworkViewport_GraphicsPipeline.cpp  NetworkViewport_GraphicsPipeline.hpp  NetworkViewport_QueueFamilies.cpp  NetworkViewport_QueueFamilies.hpp  NetworkViewport_ShaderModule.cpp  NetworkViewport_ShaderModule.hpp  NetworkViewport_SwapChain.cpp  NetworkViewport_SwapChain.hpp
core/VulkanBase/: VulkanBase.hpp
data/assets/: node.blend  node.blend1
data/computeShaders/: compile.bat  test.comp  test.comp.spv
data/models/: bezier.gltf
data/shaders/: bezier.vert  bezier.vert.spv  compile.bat  compile.sh  node.frag  (+8 more)
examples/: CMakeLists.txt
gltf/: CMakeLists.txt  NV_VulkanTexture.cpp  NV_VulkanTexture.hpp  NV_VulkanTools.cpp  NV_VulkanTools.hpp  NV_VulkanglTFModel.cpp  VulkanglTFModel.cpp  VulkanglTFModel.hpp
include/: Edge.hpp  Erdos_Renyi.hpp  File_Utils.hpp  Graph.hpp  Math_Utils.hpp  Node.hpp
kompute/: CMakeLists.txt
plot/: edgePlot.py
shaders/: CMakeLists.txt  bezier.frag  bezier.geom  compile.bat  compile.sh  cube.frag  cube.vert  edge.frag  edge.vert  shader.frag  shader.vert  way.frag  way.vert
shaders/ComputeCube/: CMakeLists.txt  compute_cube.vert  cube_calculate.comp  cube_integrate.comp  particle_calculate.comp.spv
source/: CMakeLists.txt  Graph_Designer.cpp  ImGuiUI.cpp  Menu.cpp
source/Compute/: CMakeLists.txt
source/Compute/Common/: synchronization.cpp
source/Compute/Cube/: compute.cpp  graphics.cpp  particle.cpp
source/Compute/Particle/: compute.cpp  graphics.cpp  particle.cpp
test/: CMakeLists.txt
(+59 files in other folders)
