cmake_minimum_required(VERSION 3.5)
project(NetworkViewport)
include(FetchContent)
set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
set(CMAKE_CXX_STANDARD_REQUIRED 17)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  set(OpenMP_CXX "${CMAKE_CXX_COMPILER}" CACHE STRING "" FORCE)
  set(OpenMP_CXX_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument" CACHE STRING "" FORCE)
  set(OpenMP_CXX_LIB_NAMES "libomp" "libgomp" "libiomp5" CACHE STRING "" FORCE)
  set(OpenMP_libomp_LIBRARY ${OpenMP_CXX_LIB_NAMES} CACHE STRING "" FORCE)
  set(OpenMP_libgomp_LIBRARY ${OpenMP_CXX_LIB_NAMES} CACHE STRING "" FORCE)
  set(OpenMP_libiomp5_LIBRARY ${OpenMP_CXX_LIB_NAMES} CACHE STRING "" FORCE)
endif()
include(FindVulkan)
include(cmake/external_packages.cmake)
find_package(OpenMP REQUIRED)
find_package(igraph REQUIRED)
find_package(glm REQUIRED)
find_package(glfw3 REQUIRED)
find_package(Ktx REQUIRED)
find_package(LAPACK REQUIRED)
# find_package(VulkanTools REQUIRED)
# add_subdirectory(thirdparty)
# find_package(VulkanTools REQUIRED)


# FetchContent_Declare(randomCL_repo
# GIT_REPOSITORY https://github.com/bstatcomp/RandomCL.git
# )
# FetchContent_MakeAvailable(randomCL_repo)
set(EXAMPLES_DATA_DIR "${CMAKE_BINARY_DIR}/examples/data/")
file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/examples/data")
set(CL_GENERATOR_DIR "${randomcl_repo_SOURCE_DIR}/generators")
set(CL_KERNEL_DIR "${CMAKE_SOURCE_DIR}/OpenCL/Kernels/")
set(CL_COMPILE_DEFINITIONS "-DRANDOM_CL_GENERATOR_DIR=${RANDOM_CL_GENERATOR_DIR} -DCL_TARGET_OPENCL_VERSION=300")

file(GLOB NetworkViewport_SOURCES source/*.cpp)
add_library(NetworkViewport STATIC ${NetworkViewport_SOURCES})
target_link_libraries(NetworkViewport PUBLIC imgui LAPACK::LAPACK igraph::igraph KTX::ktx VulkanTools::VulkanTools)
target_include_directories(NetworkViewport PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>)

add_subdirectory(Executables)
