add_library(NV_VulkanglTFModel STATIC NV_VulkanglTFModel.cpp)
add_library(NV_VulkanTexture STATIC NV_VulkanTexture.cpp)
add_library(NV_VulkanTools STATIC NV_VulkanTools.cpp)
add_library(NV_GLTF INTERFACE)
target_link_libraries(NV_VulkanTools PUBLIC NV_VulkanInitializers)
target_link_libraries(NV_VulkanglTFModel PUBLIC Vulkan::Vulkan ktx NV_VulkanTools NV_VulkanDevice)
target_link_libraries(NV_VulkanTexture PUBLIC Vulkan::Vulkan ktx NV_VulkanBuffer NV_VulkanTools NV_VulkanDevice)
target_include_directories(NV_VulkanglTFModel PUBLIC "${CMAKE_SOURCE_DIR}/Vulkan")
target_include_directories(NV_VulkanTexture PUBLIC "${CMAKE_SOURCE_DIR}/Vulkan")
target_include_directories(NV_VulkanTools PUBLIC "${CMAKE_SOURCE_DIR}/Vulkan")

set(NV_GLTF_LIBRARIES NV_VulkanglTFModel NV_VulkanTexture NV_VulkanTools)